Progress on fixing FindBugs items and Setup module